# haskell-examples

./: .gitignore  .gitlab-ci.yml  .hlint.yaml  Examples.cabal  Makefile  README.md  cabal.project.freeze  cabal.project.local  examples.cabal  stack.yaml
.github/workflows/: haskell.yml
app/: Main.hs
src/: Cards.hs  Contravariant.hs  Defunc.hs  FuncType.hs  Greeting.hs  Months.hs  MyFreeMonad.hs  Nullable.hs  PatSyns.hs  PolyList.hs  PrefixSums.hs  RankNTypes.hs  Selector.hs  ShowFile.hs  Singletons.hs  Strings.hs
test/: CardsSpec.hs  ContravariantSpec.hs  DefuncSpec.hs  FuncTypeSpec.hs  GreetingSpec.hs  MonthsSpec.hs  MyFreeMonadSpec.hs  NullableSpec.hs  PatSynsSpec.hs  PolyListSpec.hs  PrefixSumsSpec.hs  RankNTypesSpec.hs  SelectorSpec.hs  ShowFileSpec.hs  SingletonsSpec.hs  StringsSpec.hs
