cabal-version:      2.4
name:               Examples
version:            0.1.0
description:        Simple Haskell code examples and experiments.
homepage:           https://gitlab.com/frankhjung1/haskell-examples/
bug-reports:        https://gitlab.com/frankhjung1/haskell-examples/issues
license:            GPL-3.0-only
license-file:       LICENSE
author:             Frank H Jung
maintainer:         frankhjung@linux.com
copyright:          Copyright © 2023-2024 Frank H Jung
category:           education
extra-source-files: README.md

source-repository head
  type:     git
  location: https://gitlab.com/frankhjung1/haskell-examples/

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall
  default-extensions: OverloadedStrings
  build-depends:
    , base        ^>=4.17.2.0
    , fmt         ^>=0.6.3.0
    , QuickCheck

  exposed-modules:
    Cards
    FuncType
    Greeting
    Months
    Nullable
    RankNTypes
    Selector
    ShowFile
    Singletons
    Strings

test-suite test
  hs-source-dirs:     test src
  main-is:            TestsSpec.hs
  default-language:   Haskell2010
  ghc-options:        -Wall -Wno-missing-home-modules
  default-extensions: OverloadedStrings
  type:               exitcode-stdio-1.0
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    , base
    , Examples
    , fmt
    , hspec           ^>=2.11.7
    , hspec-discover
    , QuickCheck      ^>=2.14.3
