cabal-version:      3.0
name:               Examples
version:            0.1.0
description:        Simple Haskell code examples and experiments.
synopsis:           Haskell code examples
homepage:           https://gitlab.com/frankhjung1/haskell-examples/
bug-reports:        https://gitlab.com/frankhjung1/haskell-examples/issues
license:            GPL-3.0-only
license-file:       LICENSE
author:             Frank H Jung
maintainer:         frankhjung@linux.com
copyright:          Copyright © 2023-2025 Frank H Jung
category:           education
extra-source-files: README.md

source-repository head
  type:     git
  location: https://gitlab.com/frankhjung1/haskell-examples/

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall
  default-extensions: OverloadedStrings
  build-depends:
    , array       ^>=0.5
    , base        ^>=4.18
    , directory   ^>=1.3
    , fmt         ^>=0.6
    , free        ^>=5.2
    , groups      ^>=0.5
    , QuickCheck  ^>=2.14
    , time        ^>=1.12

  exposed-modules:
    Cards
    Contravariant
    Defunc
    FuncType
    Greeting
    Months
    MyFreeMonad
    Nullable
    PolyList
    PrefixSums
    RankNTypes
    Selector
    ShowFile
    Singletons
    Strings

test-suite test
  hs-source-dirs:     test
  main-is:            TestsSpec.hs
  default-language:   Haskell2010
  ghc-options:        -Wall -Wno-missing-home-modules
  default-extensions:
    OverloadedStrings
    ScopedTypeVariables

  type:               exitcode-stdio-1.0
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    , array           ^>=0.5
    , base            ^>=4.18
    , Examples
    , hspec           ^>=2.11
    , hspec-discover  ^>=2.11
    , QuickCheck      ^>=2.14
    , time            ^>=1.12
